@@ -21,10 +21,11 @@
 
 package eionet.meta.dao.mysql;
 
+import java.sql.Date;
 import eionet.meta.dao.IVocabularyConceptDAO;
 import eionet.meta.dao.domain.DataElement;
+import eionet.meta.dao.domain.StandardGenericStatus;
 import eionet.meta.dao.domain.VocabularyConcept;
-import eionet.meta.service.data.ObsoleteStatus;
 import eionet.meta.service.data.VocabularyConceptFilter;
 import eionet.meta.service.data.VocabularyConceptResult;
 import org.apache.commons.lang.StringUtils;
@@ -57,7 +58,8 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         params.put("vocabularyFolderId", vocabularyFolderId);
 
         StringBuilder sql = new StringBuilder();
-        sql.append("select VOCABULARY_CONCEPT_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, CREATION_DATE, OBSOLETE_DATE ");
+        sql.append("select VOCABULARY_CONCEPT_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, STATUS, ACCEPTED_DATE, ");
+        sql.append("NOT_ACCEPTED_DATE, STATUS_MODIFIED ");
         sql.append("from VOCABULARY_CONCEPT where VOCABULARY_ID=:vocabularyFolderId order by IDENTIFIER + 0");
 
         List<VocabularyConcept> resultList =
@@ -70,8 +72,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
                         vc.setLabel(rs.getString("LABEL"));
                         vc.setDefinition(rs.getString("DEFINITION"));
                         vc.setNotation(rs.getString("NOTATION"));
-                        vc.setCreated(rs.getTimestamp("CREATION_DATE"));
-                        vc.setObsolete(rs.getTimestamp("OBSOLETE_DATE"));
+                        vc.setStatus(rs.getInt("STATUS"), true);
+                        vc.setAcceptedDate(rs.getDate("ACCEPTED_DATE"));
+                        vc.setNotAcceptedDate(rs.getDate("NOT_ACCEPTED_DATE"));
+                        vc.setStatusModified(rs.getDate("STATUS_MODIFIED"));
                         return vc;
                     }
                 });
@@ -88,7 +92,7 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
 
         StringBuilder sql = new StringBuilder();
         sql.append("select SQL_CALC_FOUND_ROWS c.VOCABULARY_CONCEPT_ID, c.VOCABULARY_ID, c.IDENTIFIER, c.LABEL, c.DEFINITION, ");
-        sql.append("c.NOTATION, c.CREATION_DATE, c.OBSOLETE_DATE, v.LABEL AS VOCABULARY_LABEL, ");
+        sql.append("c.NOTATION, c.STATUS, c.ACCEPTED_DATE, c.NOT_ACCEPTED_DATE, c.STATUS_MODIFIED, v.LABEL AS VOCABULARY_LABEL, ");
         sql.append("v.IDENTIFIER AS VOCABULARY_IDENTIFIER, s.ID AS VOCSET_ID, s.LABEL as VOCSET_LABEL, ");
         sql.append("s.IDENTIFIER as VOCSET_IDENTIFIER ");
         sql.append("from VOCABULARY_CONCEPT c, VOCABULARY v, VOCABULARY_SET s ");
@@ -140,13 +144,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
             params.put("includedIds", filter.getIncludedIds());
             sql.append("and c.VOCABULARY_CONCEPT_ID in (:includedIds) ");
         }
-        if (filter.getObsoleteStatus() != null) {
-            if (ObsoleteStatus.VALID_ONLY.equals(filter.getObsoleteStatus())) {
-                sql.append("and c.OBSOLETE_DATE IS NULL ");
-            }
-            if (ObsoleteStatus.OBSOLETE_ONLY.equals(filter.getObsoleteStatus())) {
-                sql.append("and c.OBSOLETE_DATE IS NOT NULL ");
-            }
+
+        if (filter.getConceptStatus() != null) {
+            params.put("conceptStatus", filter.getConceptStatus().getValue());
+            sql.append("and c.STATUS & :conceptStatus = :conceptStatus ");
         }
 
         if (StringUtils.isNotEmpty(filter.getVocabularyText())) {
@@ -190,8 +191,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
                         vc.setLabel(rs.getString("LABEL"));
                         vc.setDefinition(rs.getString("DEFINITION"));
                         vc.setNotation(rs.getString("NOTATION"));
-                        vc.setCreated(rs.getDate("CREATION_DATE"));
-                        vc.setObsolete(rs.getDate("OBSOLETE_DATE"));
+                        vc.setStatus(rs.getInt("STATUS"), true);
+                        vc.setAcceptedDate(rs.getDate("ACCEPTED_DATE"));
+                        vc.setNotAcceptedDate(rs.getDate("NOT_ACCEPTED_DATE"));
+                        vc.setStatusModified(rs.getDate("STATUS_MODIFIED"));
                         vc.setVocabularyIdentifier(rs.getString("VOCABULARY_IDENTIFIER"));
                         vc.setVocabularyLabel(rs.getString("VOCABULARY_LABEL"));
                         vc.setVocabularySetLabel(rs.getString("VOCSET_LABEL"));
@@ -216,9 +219,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
     public void copyVocabularyConcepts(int oldVocabularyFolderId, int newVocabularyFolderId) {
         StringBuilder sql = new StringBuilder();
         sql.append("insert into VOCABULARY_CONCEPT ");
-        sql.append("(VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, ORIGINAL_CONCEPT_ID, OBSOLETE_DATE, CREATION_DATE) ");
-        sql.append("select :newVocabularyFolderId, IDENTIFIER, LABEL, DEFINITION, NOTATION, VOCABULARY_CONCEPT_ID, ");
-        sql.append("OBSOLETE_DATE, CREATION_DATE ");
+        sql.append("(VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, ORIGINAL_CONCEPT_ID, STATUS, ");
+        sql.append("ACCEPTED_DATE, NOT_ACCEPTED_DATE, STATUS_MODIFIED) ");
+        sql.append("select :newVocabularyFolderId, IDENTIFIER, LABEL, DEFINITION, NOTATION, VOCABULARY_CONCEPT_ID, STATUS, ");
+        sql.append("ACCEPTED_DATE, NOT_ACCEPTED_DATE, STATUS_MODIFIED ");
         sql.append("from VOCABULARY_CONCEPT where VOCABULARY_ID = :oldVocabularyFolderId");
 
         Map<String, Object> parameters = new HashMap<String, Object>();
@@ -234,8 +238,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
     @Override
     public int createVocabularyConcept(int vocabularyFolderId, VocabularyConcept vocabularyConcept) {
         StringBuilder sql = new StringBuilder();
-        sql.append("insert into VOCABULARY_CONCEPT (VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION) ");
-        sql.append("values (:vocabularyFolderId, :identifier, :label, :definition, :notation)");
+        sql.append("insert into VOCABULARY_CONCEPT (VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, STATUS, ");
+        sql.append("ACCEPTED_DATE, NOT_ACCEPTED_DATE, STATUS_MODIFIED) ");
+        sql.append("values (:vocabularyFolderId, :identifier, :label, :definition, :notation, :status, ");
+        sql.append(":acceptedDate, :notAcceptedDate, :statusModified)");
 
         Map<String, Object> parameters = new HashMap<String, Object>();
         parameters.put("vocabularyFolderId", vocabularyFolderId);
@@ -246,6 +252,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
             vocabularyConcept.setNotation(vocabularyConcept.getNotation().trim());
         }
         parameters.put("notation", vocabularyConcept.getNotation());
+        parameters.put("status", vocabularyConcept.getStatusValue());
+        parameters.put("acceptedDate", vocabularyConcept.getAcceptedDate());
+        parameters.put("notAcceptedDate", vocabularyConcept.getNotAcceptedDate());
+        parameters.put("statusModified", vocabularyConcept.getStatusModified());
 
         getNamedParameterJdbcTemplate().update(sql.toString(), parameters);
         return getLastInsertId();
@@ -258,7 +268,8 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
     public void updateVocabularyConcept(VocabularyConcept vocabularyConcept) {
         StringBuilder sql = new StringBuilder();
         sql.append("update VOCABULARY_CONCEPT set IDENTIFIER = :identifier, LABEL = :label, ");
-        sql.append("DEFINITION = :definition, NOTATION = :notation, CREATION_DATE = :created, OBSOLETE_DATE = :obsolete  ");
+        sql.append("DEFINITION = :definition, NOTATION = :notation, STATUS = :status, ACCEPTED_DATE = :acceptedDate, ");
+        sql.append("NOT_ACCEPTED_DATE= :notAcceptedDate, STATUS_MODIFIED = :statusModified ");
         sql.append("where VOCABULARY_CONCEPT_ID = :vocabularyConceptId");
 
         Map<String, Object> parameters = new HashMap<String, Object>();
@@ -270,8 +281,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
             vocabularyConcept.setNotation(vocabularyConcept.getNotation().trim());
         }
         parameters.put("notation", vocabularyConcept.getNotation());
-        parameters.put("created", vocabularyConcept.getCreated());
-        parameters.put("obsolete", vocabularyConcept.getObsolete());
+        parameters.put("status", vocabularyConcept.getStatusValue());
+        parameters.put("acceptedDate", vocabularyConcept.getAcceptedDate());
+        parameters.put("notAcceptedDate", vocabularyConcept.getNotAcceptedDate());
+        parameters.put("statusModified", vocabularyConcept.getStatusModified());
 
         getNamedParameterJdbcTemplate().update(sql.toString(), parameters);
     }
@@ -292,10 +305,16 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
      * {@inheritDoc}
      */
     @Override
-    public void markConceptsObsolete(List<Integer> ids) {
-        String sql = "update VOCABULARY_CONCEPT set OBSOLETE_DATE = now() where VOCABULARY_CONCEPT_ID in (:ids)";
+    public void markConceptsInvalid(List<Integer> ids) {
+        StringBuffer sql = new StringBuffer();
+        sql.append("update VOCABULARY_CONCEPT set STATUS = :invalid, STATUS_MODIFIED = now(), ");
+        sql.append("NOT_ACCEPTED_DATE = IF(NOT_ACCEPTED_DATE IS NULL OR ");
+        sql.append("(STATUS & :acceptedState) = :acceptedState, now(), NOT_ACCEPTED_DATE) ");
+        sql.append("where VOCABULARY_CONCEPT_ID in (:ids) AND STATUS != :invalid");
         Map<String, Object> parameters = new HashMap<String, Object>();
         parameters.put("ids", ids);
+        parameters.put("invalid", StandardGenericStatus.INVALID.getValue());
+        parameters.put("acceptedState", StandardGenericStatus.ACCEPTED.getValue());
 
         getNamedParameterJdbcTemplate().update(sql.toString(), parameters);
     }
@@ -304,10 +323,15 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
      * {@inheritDoc}
      */
     @Override
-    public void unMarkConceptsObsolete(List<Integer> ids) {
-        String sql = "update VOCABULARY_CONCEPT set OBSOLETE_DATE = NULL where VOCABULARY_CONCEPT_ID in (:ids)";
+    public void markConceptsValid(List<Integer> ids) {
+        StringBuffer sql = new StringBuffer();
+        sql.append("update VOCABULARY_CONCEPT set STATUS = :valid, STATUS_MODIFIED = now(), ACCEPTED_DATE = ");
+        sql.append("IF(ACCEPTED_DATE IS NULL OR (STATUS & :notAcceptedState) = :notAcceptedState, now(), ACCEPTED_DATE) ");
+        sql.append("where VOCABULARY_CONCEPT_ID in (:ids) AND STATUS != :valid");
         Map<String, Object> parameters = new HashMap<String, Object>();
         parameters.put("ids", ids);
+        parameters.put("valid", StandardGenericStatus.VALID.getValue());
+        parameters.put("notAcceptedState", StandardGenericStatus.NOT_ACCEPTED.getValue());
 
         getNamedParameterJdbcTemplate().update(sql.toString(), parameters);
     }
@@ -388,8 +412,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
     @Override
     public void insertEmptyConcepts(int vocabularyFolderId, int amount, int identifier, String label, String definition) {
         StringBuilder sql = new StringBuilder();
-        sql.append("insert into VOCABULARY_CONCEPT (VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION) ");
-        sql.append("values (:vocabularyFolderId, :identifier, :label, :definition, :notation)");
+        sql.append("insert into VOCABULARY_CONCEPT (VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, STATUS, ");
+        sql.append("NOT_ACCEPTED_DATE, STATUS_MODIFIED) ");
+        sql.append("values (:vocabularyFolderId, :identifier, :label, :definition, :notation, :status, ");
+        sql.append(":notAcceptedDate, :statusModified)");
 
         @SuppressWarnings("unchecked")
         Map<String, Object>[] batchValues = new HashMap[amount];
@@ -401,6 +427,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
             params.put("label", label);
             params.put("definition", definition);
             params.put("notation", Integer.toString(identifier));
+            params.put("status", StandardGenericStatus.INVALID.getValue());
+            Date now = new Date(System.currentTimeMillis());
+            params.put("notAcceptedDate", now);
+            params.put("statusModified", now);
             identifier++;
             batchValues[i] = params;
         }
@@ -425,7 +455,7 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         List<Integer> resultList = getNamedParameterJdbcTemplate().query(sql.toString(), parameters, new RowMapper<Integer>() {
             @Override
             public Integer mapRow(ResultSet rs, int rowNum) throws SQLException {
-                return new Integer(rs.getString("IDENTIFIER"));
+                return Integer.valueOf(rs.getString("IDENTIFIER"));
             }
         });
 
@@ -442,8 +472,8 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         params.put("identifier", conceptIdentifier);
 
         StringBuilder sql = new StringBuilder();
-        sql.append("select VOCABULARY_CONCEPT_ID, VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, ");
-        sql.append("CREATION_DATE, OBSOLETE_DATE ");
+        sql.append("select VOCABULARY_CONCEPT_ID, VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, STATUS, ");
+        sql.append("ACCEPTED_DATE, NOT_ACCEPTED_DATE, STATUS_MODIFIED ");
         sql.append("from VOCABULARY_CONCEPT where VOCABULARY_ID=:vocabularyFolderId and IDENTIFIER=:identifier");
 
         VocabularyConcept result =
@@ -457,8 +487,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
                         vc.setLabel(rs.getString("LABEL"));
                         vc.setDefinition(rs.getString("DEFINITION"));
                         vc.setNotation(rs.getString("NOTATION"));
-                        vc.setCreated(rs.getDate("CREATION_DATE"));
-                        vc.setObsolete(rs.getDate("OBSOLETE_DATE"));
+                        vc.setStatus(rs.getInt("STATUS"), true);
+                        vc.setAcceptedDate(rs.getDate("ACCEPTED_DATE"));
+                        vc.setNotAcceptedDate(rs.getDate("NOT_ACCEPTED_DATE"));
+                        vc.setStatusModified(rs.getDate("STATUS_MODIFIED"));
                         return vc;
                     }
                 });
@@ -475,8 +507,8 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         params.put("vocabularyConceptId", vocabularyConceptId);
 
         StringBuilder sql = new StringBuilder();
-        sql.append("select VOCABULARY_CONCEPT_ID, VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, CREATION_DATE, ");
-        sql.append("OBSOLETE_DATE ");
+        sql.append("select VOCABULARY_CONCEPT_ID, VOCABULARY_ID, IDENTIFIER, LABEL, DEFINITION, NOTATION, STATUS, ");
+        sql.append("ACCEPTED_DATE, NOT_ACCEPTED_DATE, STATUS_MODIFIED ");
         sql.append("from VOCABULARY_CONCEPT where VOCABULARY_CONCEPT_ID=:vocabularyConceptId");
 
         VocabularyConcept result =
@@ -490,8 +522,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
                         vc.setLabel(rs.getString("LABEL"));
                         vc.setDefinition(rs.getString("DEFINITION"));
                         vc.setNotation(rs.getString("NOTATION"));
-                        vc.setCreated(rs.getDate("CREATION_DATE"));
-                        vc.setObsolete(rs.getDate("OBSOLETE_DATE"));
+                        vc.setStatus(rs.getInt("STATUS"), true);
+                        vc.setAcceptedDate(rs.getDate("ACCEPTED_DATE"));
+                        vc.setNotAcceptedDate(rs.getDate("NOT_ACCEPTED_DATE"));
+                        vc.setStatusModified(rs.getDate("STATUS_MODIFIED"));
                         return vc;
                     }
                 });
@@ -534,7 +568,7 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         sql.append("vcn.ORIGINAL_CONCEPT_ID = vco.VOCABULARY_CONCEPT_ID ");
         sql.append("AND vco.VOCABULARY_ID = :oldVocabularyId ");
         sql.append("AND vce.RELATED_CONCEPT_ID=vco.VOCABULARY_CONCEPT_ID");
-        //TODO_20044 - check
+      //TODO_20044 - check
         Map<String, Object> parameters = new HashMap<String, Object>();
         parameters.put("oldVocabularyId", oldVocabularyId);
 
@@ -545,13 +579,15 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
     @Override
     public List<VocabularyConcept> getValidConceptsWithValuedElements(int vocabularyId, String conceptIdentifier, String label,
             String dataElementIdentifier, String language, String defaultLanguage) {
+
         Map<String, Object> params = new HashMap<String, Object>();
         params.put("vocabularyId", vocabularyId);
-
+        params.put("acceptedStatus", StandardGenericStatus.ACCEPTED.getValue());
+		
         StringBuilder sql = new StringBuilder();
         sql.append("select distinct c.VOCABULARY_CONCEPT_ID, v.DATAELEM_ID, v.ELEMENT_VALUE, v.LANGUAGE, v.RELATED_CONCEPT_ID, ");
         sql.append("d.IDENTIFIER AS ELEMIDENTIFIER, a.VALUE as DATATYPE, c.VOCABULARY_ID, c.IDENTIFIER, c.LABEL, ");
-        sql.append("c.DEFINITION, c.NOTATION, c.CREATION_DATE, c.OBSOLETE_DATE, ");
+        sql.append("c.DEFINITION, c.NOTATION, c.STATUS, c.ACCEPTED_DATE, c.NOT_ACCEPTED_DATE, c.STATUS_MODIFIED, ");
         sql.append("rcvs.IDENTIFIER as RVOCSETIDENTIFIER, rcv.IDENTIFIER as RVOCIDENTIFIER, rcv.BASE_URI as RVOCBASE_URI, ");
         sql.append("rc.IDENTIFIER AS RCONCEPTIDENTIFIER, rc.LABEL as RCONCEPTLABEL ");
         sql.append("from VOCABULARY_CONCEPT c ");
@@ -562,7 +598,7 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
         sql.append("LEFT JOIN VOCABULARY_SET rcvs ON (rcv.FOLDER_ID = rcvs.ID ) ");
         sql.append("left join (ATTRIBUTE a, M_ATTRIBUTE ma)  on (a.DATAELEM_ID = d.DATAELEM_ID ");
         sql.append("and PARENT_TYPE = 'E' and a.M_ATTRIBUTE_ID = ma.M_ATTRIBUTE_ID and ma.NAME='Datatype') ");
-        sql.append("where c.VOCABULARY_ID = :vocabularyId AND c.OBSOLETE_DATE IS NULL ");
+        sql.append("where c.VOCABULARY_ID = :vocabularyId AND c.STATUS & :acceptedStatus = :acceptedStatus ");
         if (StringUtils.isNotBlank(conceptIdentifier)) {
             sql.append(" AND LOWER(c.IDENTIFIER) LIKE LOWER(:conceptIdentifier)");
             params.put("conceptIdentifier", conceptIdentifier + "%");
@@ -590,6 +626,7 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
 
         sql.append("ORDER by c.VOCABULARY_CONCEPT_ID, v.DATAELEM_ID, d.IDENTIFIER, v.LANGUAGE, rcv.IDENTIFIER ");
 
+
         final List<VocabularyConcept> resultList = new ArrayList<VocabularyConcept>();
         getNamedParameterJdbcTemplate().query(sql.toString(), params, new RowCallbackHandler() {
             int previousConceptId = -1;
@@ -610,9 +647,10 @@ public class VocabularyConceptDAOImpl extends GeneralDAOImpl implements IVocabul
                     vc.setIdentifier(rs.getString("IDENTIFIER"));
                     vc.setDefinition(rs.getString("DEFINITION"));
                     vc.setNotation(rs.getString("NOTATION"));
-                    vc.setCreated(rs.getDate("CREATION_DATE"));
-                    vc.setObsolete(rs.getDate("OBSOLETE_DATE"));
-
+                    vc.setStatus(rs.getInt("STATUS"), true);
+                    vc.setAcceptedDate(rs.getDate("ACCEPTED_DATE"));
+                    vc.setNotAcceptedDate(rs.getDate("NOT_ACCEPTED_DATE"));
+                    vc.setStatusModified(rs.getDate("STATUS_MODIFIED"));
                     elementValues = new ArrayList<List<DataElement>>();
                     vc.setElementAttributes(elementValues);
                     resultList.add(vc);
